tests/test_assets/semantic/invalid/expressions/unary_minus_unsigned.expected
semantic error at line 7: unary '-' cannot be applied to an unsigned value
semantic error at line 8: unary '-' cannot be applied to an unsigned value
semantic error at line 9: unary '-' cannot be applied to an unsigned value
semantic error at line 10: unary '-' cannot be applied to an unsigned value
4 semantic errors generated.
